# Insta-Automate

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  triggers.env
app/: vars.py
app/instagram/: __init__.py  resource.py
app/instagram/methods/: base.py  chat.py  common.py  extras.py  followers.py  likes.py
app/instagram/objects/: audit.py  common.py  misc.py  post.py  profile.py
model/: __init__.py  audit.py  base.py  profiles.py  scanned.py
notebooks/: follow.ipynb  unfollow.ipynb  vars.py
scripts/: start_vl_server.py
src/insta_automate/: __init__.py  exceptions.py  utils.py  vars.py
src/insta_automate/assets/: banner.txt
src/insta_automate/controllers/: cli.py  data.py  device.py  docker.py  instagram.py  internet.py  ollama.py  postgres.py  prefect.py  queue.py  telegram.py
src/insta_automate/flows/: __init__.py  ai_classify.py  entity_classify.py  entity_follow.py  entity_ingest.py  entity_scan.py  entity_scrape.py  gender_classify.py  sample_flow.py
src/insta_automate/models/: docker.py  entity.py  follow.py  meta.py  scan.py  scanned.py  scrape.py  telegram.py  user.py
src/insta_automate/tasks/: __init__.py  data.py  db.py  device.py  ia.py  ollama.py  telegram.py  tl.py
utils/: __init__.py  android.py  kubernetes.py  logger.py  misc.py  scrcpy.py  sql.py
