[project]
name = "insta-automate"
version = "0.1.0"
description = "Instagram automation flows."
readme = "README.md"
authors = [
    { name = "SeshuTarapatla", email = "seshu.tarapatla@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "async-typer>=0.1.10",
    "humanize>=4.15.0",
    "my-modules",
    "ollama>=0.6.1",
    "pillow>=12.2.0",
    "prefect-k3s",
    "python-dotenv>=1.2.2",
    "send2trash>=2.1.0",
    "sqlmodel>=0.0.38",
    "telethon>=1.42.0",
    "uiautomator2>=3.5.0",
    "wsl-bridge",
]

[project.scripts]
insta-automate = "insta_automate:ia"
ia = "insta_automate:ia"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
my-modules = { git = "https://github.com/SeshuTarapatla/my-modules.git" }
prefect-k3s = { git = "https://github.com/SeshuTarapatla/Prefect-K3s.git" }
tg-auth = { git = "https://github.com/SeshuTarapatla/TG-Auth.git" }
wsl-bridge = { git = "https://github.com/SeshuTarapatla/wsl-bridge.git" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "tg-auth",
]
